--- a/intro.html
+++ b/intro.html
@@ -24,20 +24,21 @@
     <div class="blue">This is a toid div</div>
 
     <ol id="thelist">
-      <li>item 0</li>
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-      <li>item 4</li>
-      <li>item 5</li>
-      <li>item 6</li>
-      <li>item 7</li>
+
     </ol>
 
-    <button id="b">The button</button>
+    <button id="newEl">Add a new element!</button>
     
     <script src="intro.js"></script>
   </body>
 
 </html>
 
+<!--      <li>item 0</li>
+      <li>item 1</li>
+      <li>item 2</li>
+      <li>item 3</li>
+      <li>item 4</li>
+      <li>item 5</li>
+      <li>item 6</li>
+      <li>item 7</li>-->
