--- a/intro.html
+++ b/intro.html
@@ -27,7 +27,7 @@
 
     </ol>
 
-    <button id="newEl">Add a new element!</button>
+    <button id="newEl">Add the next number of the fibonacci sequence!!</button>
     
     <script src="intro.js"></script>
   </body>
