--- a/intro.html
+++ b/intro.html
@@ -3,7 +3,7 @@
 	cuddly-umbrella
 	Jen Yu and Jawadul Kadir
 	SoftDev1 pd7
-	K15 -- DOMinating JS
+	K #16: Sequential Progression II: Electric Boogaloo
 	2017-12-08
 -->
 
