--- a/intro.html
+++ b/intro.html
@@ -32,14 +32,21 @@
       <li>item 6</li>
       <li>item 7</li>
     </ol>
-    
+
     <button id="newE">Add another item to the list!!</button>
-    
+
     <ol id="thelist">
 
     </ol>
 
-    <button id="newEl">Add the next number of the fibonacci sequence!!</button>
+    <button id="newFib">Add the next number of the fibonacci sequence!!</button>
+
+	<ol id="mersenne">
+
+	</ol>
+
+	<button id="newMersenne">Add the next mersenne number!!</button>
+
     <script src="intro.js"></script>
   </body>
 
